# python-worker-dispatcher

./: LICENSE  README.md  pyproject.toml
img/: introduction.planuml  mode-explanation.planuml
src/worker_dispatcher/: __init__.py  worker_dispatcher.py
