[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "worker_dispatcher"
version = "1.0.5"
authors = [
  { name="Nick Tsai", email="myintaer@gmail.com" },
]
description = "A flexible task dispatcher for Python with multiple threading or processing control"
readme = "README.md"
requires-python = ">=3.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/yidas/python-worker-dispatcher"
Issues = "https://github.com/yidas/python-worker-dispatcher/issues"
